# guacamol

./: .travis.yml  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
data/: README.md  holdout_set_gcm_v1.smiles
dockers/: Dockerfile  requirements.txt
guacamol/: .flake8  assess_distribution_learning.py  assess_goal_directed_generation.py  benchmark_suites.py  common_scoring_functions.py  distribution_learning_benchmark.py  frechet_benchmark.py  goal_directed_benchmark.py  goal_directed_generator.py  score_modifier.py  scoring_function.py  similaritymetric_benchmarks.py  similaritymetric_scoring_function.py  standard_benchmarks.py
guacamol/data/: README.md  get_data.py  holdout_set_gcm_v1.smiles
guacamol/utils/: chemistry.py  data.py  descriptors.py
tests/: mock_generator.py  test_distribution_learning_benchmarks.py  test_goal_directed_benchmark.py  test_sampling_helpers.py  test_scoring_functions.py
tests/utils/: test_chemistry.py  test_descriptors.py
